footer and experience addad

--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body {
 h1 {
     font-size: 50px;
 }
+h2 {
+    font-size: 40px;
+}
 .orange-color {
     color:orange;
 }
-section {
+.flexible-container {
     display:flex;
     margin-bottom: 150px;
 }
@@ -35,4 +38,30 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item {
+    width: 40%;
+    box-shadow: 10px 10px 40px grey;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 3%;
+    border-radius: 10px;
+}
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#web-dev-experience {
+border-image: linear-gradient(blue, cyan);
+border-left: 7px solid;
+border-image-slice: 1;
+}
+#full-stack-experience {
+    border-image: linear-gradient( orange, tomato);
+border-left: 7px solid;
+border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
